Fix client name alignment on single project page

--- a/src/components/project/index.css
+++ b/src/components/project/index.css
@@ -100,7 +100,7 @@
 
   .Project-client {
     font: 400 24px/30px var(--sans-thin);
-    margin-left: -70px;
+    margin-left: -95px;
     margin-top: 0;
     max-width: 420px;
     padding-left: 125px;
