--- a/wordpress/wp-content/themes/rosepilkington/style.css
+++ b/wordpress/wp-content/themes/rosepilkington/style.css
@@ -909,7 +909,7 @@ Description: A portfolio web site
 
   .Project-client {
     font: 400 24px/30px 'HelveticaNeueThin', Helvetica, sans-serif;
-    margin-left: -70px;
+    margin-left: -95px;
     margin-top: 0;
     max-width: 420px;
     padding-left: 125px
